로그인 화면

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,8 +31,7 @@
 </head>
 
      <body class="login">
-        <div id="box">
-            
+        <div class="tab-content bx-s-0 m-b-0" style="background-color:#6a76fc; background-color:rgba(255,255,255,0.3);padding:40px; border-radius: 5px;"  >
         </div>
         
         <video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
@@ -41,67 +40,90 @@
         
         <div class="wrapper-page">
         
-        <div class="col-xs-12">
+            <!--<div class="col-xs-12">-->
         
-            <div class="text-center">
-                <a href="/" class="logo logo-lg"><img src="/images/data-logo.png" width="85%" height="85%" align="center"></a>
-            </div>
+            <!--    <div class="text-center">-->
+            <!--        <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>-->
+            <!--    </div>-->
+            <!--</div>-->
+            
+             <div class="col-lg-12">
+                        <form class="form-horizontal m-t-20" action="/login" method="post">
+                            <div id="progressbarwizard" class="pull-in" >
+                                
+                                
+                                <div class="tab-content bx-s-0 m-b-0" style="background-color:#6a76fc; background-color:rgba(255,255,255,0.3);padding:40px; border-radius: 5px;"  >
+                                    
+                                    
+                                    <div class="text-center" style="margin-bottom:40px;margin-right:5px">
+                                        <a href="/" class="logo logo-lg"><img src="/images/data-logo.png" width="70%"></a>
+                                    </div>
+                                    
+                                    <div class="form-group">
+                                        <div class="col-xs-12">
+                                            
+                                            <input class="form-control" type="text" required="" placeholder="userid" name="uid">
+                                            <i class="md md-account-circle form-control-feedback l-h-34"></i>
+                                            
+                                        </div>
+                                    </div>
+                    
+                                    <div class="form-group">
+                                        <div class="col-xs-12">
+                                            <input class="form-control" type="password" required="" placeholder="Password" name="password">
+                                            <i class="md md-vpn-key form-control-feedback l-h-34"></i>
+                                        </div>
+                                    </div>
+                    
+                                    <div class="form-group">
+                                        <div class="col-xs-12">
+                                            <div class="checkbox checkbox-primary">
+                                                <input id="checkbox-signup" type="checkbox" name="signup">
+                                                <label for="checkbox-signup" style="color: MintCream">
+                                                    Remember me
+                                                </label>
+                                            </div>
+                    
+                                        </div>
+                                    </div>
+                    
+                                    <div class="form-group text-right m-t-20">
+                                        <div class="col-xs-12">
+                                            <button class="btn btn-primary btn-custom w-md waves-effect waves-light" type="submit">Log In
+                                            </button>
+                                        </div>
+                                    </div>
+                    
+                                    <div class="form-group m-t-30">
+                                        <div class="col-sm-7">
+                                            <a style="color: MintCream" href="pages-recoverpw.html" class="text-muted">
+                                        <%loginError.forEach(function(e){ %>
+                                        <%=e%>
+                                        <%})%></a>
+                                        </div>
+                    
+                                        <div class="col-sm-12">
+                                        </div>
+                    
+                                        <div class="col-sm-5 text-right">
+                                            <a href="/login/new" class="text-muted" style="color: MintCream"; font-size=10px>Create an account</a>
+                                        </div>
+                                    </div>
+                                    
+                                    
+
+                                    
+                            </div>
+                            
+                            
+                        </form>    
+                        <!--</div>-->
+                    </div>
+                    
+          
         </div>
-
-            <form class="form-horizontal m-t-20" action="/login" method="post">
-
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        
-                        <input class="form-control" type="text" required="" placeholder="userid" name="uid">
-                        <i class="md md-account-circle form-control-feedback l-h-34"></i>
-                        
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="Password" name="password">
-                        <i class="md md-vpn-key form-control-feedback l-h-34"></i>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <div class="checkbox checkbox-primary">
-                            <input id="checkbox-signup" type="checkbox" name="signup">
-                            <label for="checkbox-signup" style="color: MintCream">
-                                Remember me
-                            </label>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="form-group text-right m-t-20">
-                    <div class="col-xs-12">
-                        <button class="btn btn-primary btn-custom w-md waves-effect waves-light" type="submit">Log In
-                        </button>
-                    </div>
-                </div>
-
-                <div class="form-group m-t-30">
-                    <div class="col-sm-7">
-                        <a style="color: MintCream" href="pages-recoverpw.html" class="text-muted">
-                    <%loginError.forEach(function(e){ %>
-                    <%=e%>
-                    <%})%></a>
-                    </div>
-
-                    <div class="col-sm-12">
-                    </div>
-
-                    <div class="col-sm-5 text-right">
-                        <a href="/login/new" class="text-muted" style="color: MintCream"; font-size=10px>Create an account</a>
-                    </div>
-                </div>
-            </form>
-        </div>
+        
+        
             
     	<script>
             var resizefunc = [];
