첫화면은 되는데 옆에 정렬방법 누르지 마요 에러떠요

--- a/views/med.ejs
+++ b/views/med.ejs
@@ -25,10 +25,10 @@
                             <a href="/med/new" class="btn btn-danger btn-custom btn-block waves-effect waves-light">새로 등록하기</a>
 
                             <div class="list-group mail-list  m-t-20">
-                                <a href="#" class="list-group-item b-0"><i class="fa fa-download m-r-10"></i>금액높은순</a>
-                                <a href="#" class="list-group-item b-0"><i class="fa fa-star-o m-r-10"></i>금액낮은순</a>
-                                <a href="#" class="list-group-item b-0"><i class="fa fa-file-text-o m-r-10"></i>최신등록순</a>
-                                <a href="#" class="list-group-item b-0"><i class="fa fa-paper-plane-o m-r-10"></i>마감임박순</a>
+                                <a href="/med/1" class="list-group-item b-0"><i class="fa fa-download m-r-10"></i>금액높은순</a>
+                                <a href="/med/2" class="list-group-item b-0"><i class="fa fa-star-o m-r-10"></i>금액낮은순</a>
+                                <a href="/med/3" class="list-group-item b-0"><i class="fa fa-file-text-o m-r-10"></i>최신등록순</a>
+                                <a href="/med/4" class="list-group-item b-0"><i class="fa fa-paper-plane-o m-r-10"></i>마감임박순</a>
                             </div>
                             
                             <!--<div class="list-group mail-list  m-t-20">-->
