--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -1,7 +1,7 @@
 <% include main%>
 <style>
     html, body {
-      /*overflow-y:hidden;*/
+      overflow-y:hidden;
       height:100%;
     }
     
@@ -14,6 +14,9 @@
       width: auto;
       height: auto;
       overflow: hidden;
+    }
+    .doregister{
+        margin-right:5px;
     }
 
 </style>
@@ -41,7 +44,7 @@
                                     <li><a href="#profile-tab-2" data-toggle="tab">Profile</a></li>
                                     <li><a href="#finish-2" data-toggle="tab">Finish</a></li>
                                 </ul>
-
+                                
                                 <div class="tab-content bx-s-0 m-b-0" style="background-color:#6a76fc; background-color:rgba(255,255,255,0.3);padding:40px; border-radius: 5px;"  >
                                     
                                     
@@ -111,25 +114,25 @@
                                                     <div class="checkbox checkbox-success form-group">
                                                         <input id="checkbox3" type="checkbox">
                                                         <label for="checkbox3">
-                                                            <b>금융/경제
+                                                            <b>금융/경제</b>
                                                         </label>
                                                     </div>
                                                     <div class="checkbox checkbox-info form-group">
                                                         <input id="checkbox4" type="checkbox">
                                                         <label for="checkbox4">
-                                                            IT/공학
+                                                            <b>IT/공학</b>
                                                         </label>
                                                     </div>
                                                     <div class="checkbox checkbox-warning form-group">
                                                         <input id="checkbox5" type="checkbox">
                                                         <label for="checkbox5">
-                                                            사회/교육/심리
+                                                            <b>사회/교육/심리</b>
                                                         </label>
                                                     </div>
                                                     <div class="checkbox checkbox-danger form-group">
                                                         <input id="checkbox6" type="checkbox">
                                                         <label for="checkbox6">
-                                                            언어
+                                                            <b>언어</b>
                                                         </label>
                                                     </div>
                                                 </b>    
@@ -141,29 +144,29 @@
                                     <div class="tab-pane p-t-10 fade" id="finish-2">
                                         <div class="row">
                                             <div class="col-xs-12">
-                                                <p>사용가능한 언어 선택</p>
+                                                <p><b>사용가능한 언어 선택</b></p>
                                                 <div class="checkbox form-group">
                                                     <input id="checkbox0" type="checkbox" checked>
                                                     <label for="checkbox0">
-                                                        없음
+                                                        <b>없음</b>
                                                     </label>
                                                 </div>
                                                 <div class="checkbox checkbox-primary form-group">
                                                     <input id="checkbox2" type="checkbox">
                                                     <label for="checkbox2">
-                                                        Excel
+                                                        <b>Excel</b>
                                                     </label>
                                                 </div>
                                                 <div class="checkbox checkbox-success form-group">
                                                     <input id="checkbox3" type="checkbox">
                                                     <label for="checkbox3">
-                                                        Python
+                                                        <b>Python</b>
                                                     </label>
                                                 </div>
                                                 <div class="checkbox checkbox-info form-group">
                                                     <input id="checkbox4" type="checkbox">
                                                     <label for="checkbox4">
-                                                        R/SAS
+                                                        <b>R/SAS</b>
                                                     </label>
                                                 </div>
                                             </div>
@@ -188,7 +191,7 @@
                                         </li>
                                         <li class="previous"><a href="#" class="btn btn-primary waves-effect waves-light">Previous</a></li>
                                         <li class="next last" style="display:none;"><a href="#">Last</a></li>
-                                        <li class="next"><a href="#" class="btn btn-primary waves-effect waves-light">Next</a></li>
+                                        <li class="next"><a href="#" class="btn btn-primary waves-effect waves-light">&nbsp Next &nbsp</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -199,70 +202,6 @@
                     </div>
                     
             
-            <p>&nbsp</p>
-            <p>&nbsp</p>
-            <p>&nbsp</p>
-            <p>&nbsp</p>
-            <form class="form-horizontal m-t-20" id="user" action="/login/new" method="post">
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="아이디 입력" name="user[uid]">
-                        <i class="md md-perm-identity form-control-feedback l-h-34"></i>
-                    </div>
-                </div>
-                
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="비밀번호 입력" name="user[password]">
-                        <i class="md md-vpn-key form-control-feedback l-h-34"></i>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="password" required="" placeholder="비밀번호 확인" name="user[passwordConfirmation]">
-                        <i class="md md-done form-control-feedback l-h-34"></i>
-                    </div>
-                </div>
-                
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="email" required="" placeholder="Email" name="user[email]">
-                        <i class="md md-email form-control-feedback l-h-34"></i>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <input class="form-control" type="text" required="" placeholder="이용자 이름" name="user[name]">
-                        <i class="md md-account-circle form-control-feedback l-h-34"></i>
-                    </div>
-                </div>
-                
-
-                <div class="form-group">
-                    <div class="col-xs-12">
-                        <div class="checkbox checkbox-primary">
-                            <input id="checkbox-signup" type="checkbox" checked="checked">
-                            <label for="checkbox-signup" style="color: MintCream">
-                                I accept <a href="#" style="color: Lime">Terms and Conditions</a>
-                            </label>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="form-group text-right m-t-20">
-                    <div class="col-xs-12">
-                        <button class="btn btn-primary btn-custom waves-effect waves-light w-md" type="submit">Register</button>
-                    </div>
-                </div>
-
-                <div class="form-group m-t-30">
-                    <div class="col-sm-12 text-center">
-                        <a href="pages-login.html" class="text-muted" style="color: MintCream">Already have account?</a>
-                    </div>
-                </div>
-            </form>
 
         </div>
 
