--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -100,37 +100,37 @@
                                                 
                                                     <p><b>전공 또는 관심분야</b></p>
                                                     <div class="checkbox form-group">
-                                                        <input id="checkbox0" type="checkbox" checked>
+                                                        <input id="checkbox0" type="checkbox" checked name="major" value=-1>
                                                         <label for="checkbox0">
                                                             <b>없음</b>
                                                         </label>
                                                     </div>
                                                     <div class="checkbox checkbox-primary form-group">
-                                                        <input id="checkbox2" type="checkbox">
+                                                        <input id="checkbox2" type="checkbox" name="major" value=1>
                                                         <label for="checkbox2">
                                                             <b>생명/의학/약학</b>
                                                         </label>
                                                     </div>
                                                     <div class="checkbox checkbox-success form-group">
-                                                        <input id="checkbox3" type="checkbox">
+                                                        <input id="checkbox3" type="checkbox" name="major" value=2>
                                                         <label for="checkbox3">
                                                             <b>금융/경제</b>
                                                         </label>
                                                     </div>
                                                     <div class="checkbox checkbox-info form-group">
-                                                        <input id="checkbox4" type="checkbox">
+                                                        <input id="checkbox4" type="checkbox" name="major" value=3>
                                                         <label for="checkbox4">
                                                             <b>IT/공학</b>
                                                         </label>
                                                     </div>
                                                     <div class="checkbox checkbox-warning form-group">
-                                                        <input id="checkbox5" type="checkbox">
+                                                        <input id="checkbox5" type="checkbox" name="major" value=4>
                                                         <label for="checkbox5">
                                                             <b>사회/교육/심리</b>
                                                         </label>
                                                     </div>
                                                     <div class="checkbox checkbox-danger form-group">
-                                                        <input id="checkbox6" type="checkbox">
+                                                        <input id="checkbox6" type="checkbox" name="major" value=5>
                                                         <label for="checkbox6">
                                                             <b>언어</b>
                                                         </label>
@@ -146,25 +146,25 @@
                                             <div class="col-xs-12">
                                                 <p><b>사용가능한 언어 선택</b></p>
                                                 <div class="checkbox form-group">
-                                                    <input id="checkbox0" type="checkbox" checked>
+                                                    <input id="checkbox0" type="checkbox" checked name="lang" value=-1>
                                                     <label for="checkbox0">
                                                         <b>없음</b>
                                                     </label>
                                                 </div>
                                                 <div class="checkbox checkbox-primary form-group">
-                                                    <input id="checkbox2" type="checkbox">
+                                                    <input id="checkbox2" type="checkbox" name="lang" value=1>
                                                     <label for="checkbox2">
                                                         <b>Excel</b>
                                                     </label>
                                                 </div>
                                                 <div class="checkbox checkbox-success form-group">
-                                                    <input id="checkbox3" type="checkbox">
+                                                    <input id="checkbox3" type="checkbox" name="lang" value=2>
                                                     <label for="checkbox3">
                                                         <b>Python</b>
                                                     </label>
                                                 </div>
                                                 <div class="checkbox checkbox-info form-group">
-                                                    <input id="checkbox4" type="checkbox">
+                                                    <input id="checkbox4" type="checkbox" name="lang" value=3>
                                                     <label for="checkbox4">
                                                         <b>R/SAS</b>
                                                     </label>
@@ -207,7 +207,7 @@
 
         
     	<script>
-            var resizefunc = [];
+            var resizefunc = ;
         </script>
 
         <!-- Main  -->
